# parallax

./: .gitignore  Cargo.toml  README.md  basic.txt  completion_plan.md  debug_output.txt  parser_coverage.md  rustc-ice-2025-05-04T11_31_32-30228.txt  rustc-ice-2025-05-04T17_46_59-49584.txt  rustc-ice-2025-05-05T11_21_23-60500.txt  test.hvm  test_output.txt
crates/parallax-cli/: Cargo.toml  README.md
crates/parallax-cli/src/: error.rs  io.rs  main.rs  utils.rs
crates/parallax-cli/src/commands/: build.rs  check.rs  clean.rs  mod.rs  new.rs  run.rs
crates/parallax-codegen/: Cargo.toml  README.md
crates/parallax-codegen/src/: error.rs  generator.rs  inet.rs  lib.rs  llvm.rs
crates/parallax-db/: Cargo.toml  README.md
crates/parallax-db/src/: database.rs  error.rs  lib.rs
crates/parallax-effects/: Cargo.toml  README.md
crates/parallax-effects/src/: lib.rs
crates/parallax-gc/: Cargo.toml
crates/parallax-gc/src/: closure.rs  ffi.rs  lib.rs  readback.rs  roots.rs  string.rs  tracer.rs
crates/parallax-gc/src/collections/: array.rs  closure.rs  mod.rs  string.rs
crates/parallax-gc/src/layout/: adt.rs  array.rs  descriptor.rs  helpers.rs  mod.rs
crates/parallax-hir/: Cargo.toml  README.md
crates/parallax-hir/src/: db.rs  dce.rs  hir.rs  inlining.rs  lib.rs  lower.rs  tests.rs
crates/parallax-hir/src/lower/: expr.rs  items.rs  mod.rs  pattern.rs  types.rs
crates/parallax-hir/tests/: aggregates.rs  basic.rs  closures.rs  control_flow.rs  dce.rs  inlining.rs
crates/parallax-lang/: Cargo.toml
crates/parallax-lang/src/: error.rs  lib.rs  visitor.rs
crates/parallax-lang/src/ast/: common.rs  expr.rs  items.rs  mod.rs  pattern.rs  types.rs
crates/parallax-lang/src/parser/: calls.rs  common.rs  expr.rs  items.rs  literals.rs  mod.rs  pattern.rs  structs.rs  types.rs
crates/parallax-mir/: Cargo.toml  README.md
crates/parallax-mir/src/: db.rs  error.rs  lib.rs  mir.rs
crates/parallax-mir/src/ir/: basic_block.rs  function.rs  instruction.rs  mod.rs  place.rs  statement.rs  terminator.rs  visit.rs
crates/parallax-mir/src/lower/: function.rs  mod.rs
crates/parallax-mir/src/lowering/: context.rs  expr.rs  mod.rs  module.rs  prepass.rs  tests.rs  types.rs
crates/parallax-mir/src/mono/: mod.rs
crates/parallax-mir/src/opt/: mod.rs
crates/parallax-mir/src/tests/: expression_lowering.rs  function_lowering.rs  mod.rs  monomorphization.rs  operator_lowering.rs  optimizations.rs  pattern_matching.rs  statement_lowering.rs  type_conversions.rs  visitors.rs
crates/parallax-mir/src/util/: mod.rs
crates/parallax-mir/tests/: aggregates.rs  closures.rs  common.rs  control_flow.rs  function_calls.rs  let_bindings.rs  literals_constants.rs  operators_intrinsics.rs  parameters_return.rs  projections.rs  statics.rs
crates/parallax-native/: Cargo.toml  README.md
crates/parallax-native/src/: backend.rs  error.rs  lib.rs  runtime.rs
crates/parallax-native/src/translator/: context.rs  expr.rs  func.rs  helpers.rs  intrinsics.rs  layout.rs  mod.rs  operand.rs  pattern.rs  tail.rs  types.rs  value.rs
crates/parallax-net/: Cargo.toml  README.md  combined.txt
crates/parallax-net/src/: allocator.rs  async_node.rs  cache.rs  encoding.rs  lib.rs  lowering.rs  node.rs  numa.rs  partition.rs  port.rs  reduce.rs  runtime.rs  simd.rs  strings.rs  utils.rs  work_stealing.rs  worker.rs
crates/parallax-net/src/lowering/: builder.rs  config.rs  edges.rs  error.rs  mod.rs  nodes.rs  tests.rs
crates/parallax-net/src/runtime/: mod.rs  port.rs  reduction.rs  runtime.rs  slab.rs  storage.rs  thread_state.rs  types.rs
crates/parallax-net/tests/: lower_constant_integration.rs  lower_constructor_integration.rs  lower_if_value_integration.rs  lower_projection_integration.rs  lower_static_addr_integration.rs  lowering_integration.rs
crates/parallax-resolve/: Cargo.toml  README.md
crates/parallax-resolve/src/: core.rs  db.rs  definitions.rs  error.rs  imports.rs  lib.rs  namespace.rs  resolve_expr.rs  resolve_types.rs  resolver.rs  scopes.rs  symbol.rs  types.rs
crates/parallax-resolve/src/resolver/: core.rs  expr.rs  item.rs  mod.rs  path.rs  pattern.rs  types.rs
crates/parallax-resolve/src/scope/: mod.rs
crates/parallax-resolve/tests/: error_tests.rs  expr_type_inference_tests.rs  field_access_tests.rs  generics_tests.rs  imports_tests.rs  integration_tests.rs  module_tests.rs  namespace_tests.rs  resolver_basic_tests.rs  resolver_issues_tests.rs  resolver_tests.rs  symbol_table_tests.rs  test_main.rs  type_resolution_tests.rs
crates/parallax-rt/: Cargo.toml
crates/parallax-rt/src/: error.rs  lib.rs  runtime.rs
crates/parallax-rt/src/inet/: manager.rs  (+6 more)
crates/parallax-source/: Cargo.toml  README.md
crates/parallax-source/src/: config.rs  diagnostic.rs  error.rs  file.rs  frame.rs  lib.rs  path.rs
crates/parallax-stdlib/: Cargo.toml  README.md  frame.toml
crates/parallax-stdlib/src/: cmp.plx  into.plx  io.plx  lib.rs  list.plx  num.plx  ops.plx  option.plx  panic.plx  prelude.plx  result.plx  runtime.rs  string.plx  tree.plx
crates/parallax-syntax/: Cargo.toml  README.md
crates/parallax-syntax/examples/: parse_file_tree.rs  print_tree.rs
crates/parallax-syntax/src/: error.rs  lib.rs  location.rs  visitor.rs
crates/parallax-syntax/tests/: advanced_types.plx  complex_module.plx  expressions.plx  integration_tests.rs  invalid_syntax.plx  patterns.plx  simple.plx
crates/parallax-typeck/: Cargo.toml  roadmap.md  task1_progress.md
crates/parallax-typeck/src/: context.rs  db.rs  diagnostics.rs  error.rs  hir.rs  infer.rs  lib.rs  resolve.rs  salsa_db.rs  symbol_resolver.rs  traits.rs  unify.rs
crates/parallax-types/: Cargo.toml  README.md
crates/parallax-types/src/: declarations.rs  error.rs  inference.rs  lib.rs  traits.rs  types.rs
crates/parallax-types/tests/: mod.rs
crates/tree-sitter-parallax/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
crates/tree-sitter-parallax/src/: grammar.json  node-types.json  parser.c
(+239 files in other folders)
