[workspace]
members = [
    "crates/parallax-cli",
    "crates/parallax-hvm",
    "crates/parallax-net",
    "crates/parallax-lang",
    "crates/parallax-codegen",
    "crates/parallax-resolve",
    "crates/parallax-typeck",
    "crates/parallax-mir",
    "crates/tree-sitter-parallax"
]
resolver = "2"

[workspace.package]
name = "parallax"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
miette = { version = "7.4.0", features = ["fancy"] }
thiserror = "1.0"

[workspace.metadata]
default-run = "parallax-cli"
