[workspace]
members = [
    "crates/parallax-cli",
    "crates/parallax-source",
    "crates/parallax-syntax",
    "crates/parallax-db",
    "crates/parallax-stdlib",
    # "crates/parallax-hvm",
    "crates/parallax-hir",
    "crates/parallax-net",
    "crates/parallax-codegen",
    "crates/parallax-resolve",
    "crates/tree-sitter-parallax",
    "crates/parallax-types",
    "crates/parallax-effects",
    "crates/parallax-native",
    "crates/parallax-utils",
    "crates/parallax-mir",
    "crates/parallax-gc",
    "crates/parallax-rt",
]
resolver = "2"

[workspace.package]
name = "parallax"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
miette = { version = "7.4.0", features = ["fancy"] }
thiserror = "1.0"
salsa = "0.19.0"
rustc-hash = "1.1.0"
log = "0.4"
rsgc = "1.1.0"

[workspace.metadata]
default-run = "parallax-cli"
