[package]
name = "parallax-cli"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
miette = { workspace = true }
thiserror = { workspace = true }
parallax-ir = { path = "../parallax-ir" }
parallax-vm = { path = "../parallax-vm" }