[package]
name = "parallax-codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal dependencies
parallax-lang = { path = "../parallax-lang" }

# LLVM bindings
inkwell = { version = "0.5.0", features = ["llvm18-0"] }

# Error handling
miette = "7.0.0"
thiserror = "1.0.50"

# Utilities
log = "0.4.20" 