[package]
name = "parallax-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parallax-hir = { path = "../parallax-hir" }
parallax-native = { path = "../parallax-native" }
# Error handling
miette = { workspace = true }
thiserror = { workspace = true }