[package]
name = "parallax-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parallax-hir = { path = "../parallax-hir" }
parallax-mir = { path = "../parallax-mir" }
parallax-native = { path = "../parallax-native" }
parallax-net = { path = "../parallax-net" }
# Error handling
miette = { workspace = true }
thiserror = "1.0"

[dev-dependencies]
# Add dev dependencies if needed