[package]
name = "parallax-effects"
version.workspace = true
edition.workspace = true
description = "Effect tracking for the Parallax compiler"

[dependencies]
salsa = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
thiserror = { workspace = true }
parallax-types = { path = "../parallax-types" }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
triomphe = "0.1.8" 