[package]
name = "parallax-gc"
version = "0.1.0"
edition = "2021"

[dependencies]
parallax-hir = { path = "../parallax-hir" }
rsgc = { workspace = true }
log = { workspace = true }
once_cell = "1.19"
memoffset = "0.9.1"
winapi = { version = "0.3.9", features = ["processthreadsapi"] }

[dev-dependencies]
# Add testing dependencies if needed
