[package]
name = "parallax-hir"
version.workspace = true
edition.workspace = true

[dependencies]
salsa = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
thiserror = { workspace = true }
fxhash = "0.2"

# Add dependency on the resolve crate for types like Symbol
parallax-resolve = { path = "../parallax-resolve" }

# Add dependency on the types crate for TypedModule, Ty, etc.
parallax-types = { path = "../parallax-types" }

# Add dependency on the syntax crate for BinaryOp, UnaryOp, Literal
parallax-syntax = { path = "../parallax-syntax" }
