[package]
name = "parallax-lang"
version.workspace = true
edition.workspace = true

[dependencies]
tree-sitter = "0.25.1"
tree-sitter-parallax = { path = "../tree-sitter-parallax" }
miette = { version = "5.10", features = ["fancy"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
