[package]
name = "parallax-mir"
version.workspace = true
edition.workspace = true

[dependencies]
# Core dependencies
parallax-lang = { path = "../parallax-lang" }
parallax-hir = { path = "../parallax-hir" }
parallax-types = { path = "../parallax-types" }

# Database integration (for incremental compilation)
salsa = { workspace = true }

# Error handling
thiserror = "1.0"

# For data structures
rustc-hash = "1.1.0"
