[package]
name = "parallax-net"
version = "0.1.0"
edition = "2021"

[dependencies]
# Memory allocation
bumpalo = "3.15.0"

# SIMD support
wide = "0.7.13"
concurrent-queue = "2.4"
event-listener = "5.0"

# Work stealing and concurrency
crossbeam = "0.8"
parking_lot = "0.12"

# Async support
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }

lazy_static = "1.4"
aligned = "0.4.2"
rand = "0.9.0"
crossbeam-queue = "0.3.12"
dashmap = { version = "6.1.0", features = ["serde"] }
libnuma = "0.0.4"
hwlocality = "1.0.0-alpha.6"
