[package]
name = "parallax-net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Memory allocation
bumpalo = "3.15.0"

# SIMD support
wide = "0.7.13"

# Concurrency
crossbeam-queue = "0.3.12"
crossbeam-utils = "0.8"
parking_lot = "0.12"

# Async support
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }

# Utilities
lazy_static = "1.4"
aligned = "0.4.2"
rand = "0.9.0"
dashmap = { version = "6.1.0", features = ["serde"] }
num_cpus = "1.16"
slab = "0.4.9"
sharded-slab = "0.1.7"
fxhash = "0.2.1"

# Workspace dependencies
parallax-hir = { path = "../parallax-hir" }
parallax-mir = { path = "../parallax-mir" }

# Error handling
thiserror = "1.0"
parallax-resolve = { version = "0.1.0", path = "../parallax-resolve" }
miette = { workspace = true }

# Added log
log = "0.4"

[dev-dependencies]
env_logger = "0.10"
# Add other dev dependencies as needed

