[package]
name = "parallax-resolve"
version.workspace = true
edition.workspace = true

[dependencies]
parallax-lang = { path = "../parallax-lang" }
miette = { workspace = true }
thiserror = { workspace = true }
salsa = { workspace = true }
parallax-source = { path = "../parallax-source" }
parallax-syntax = { path = "../parallax-syntax" }
fxhash = "0.2.1"

[dev-dependencies]
expect-test = "1.4.0"
