[package]
name = "parallax-rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parallax-gc = { path = "../parallax-gc" }
parallax-hir = { path = "../parallax-hir" }
parallax-native = { path = "../parallax-native" }
parallax-net = { path = "../parallax-net" }
parallax-resolve = { path = "../parallax-resolve" }
rsgc = { workspace = true }

log = "0.4"
thiserror = "1.0"
slab = "0.4"
crossbeam-queue = "0.3"
num_cpus = "1.16"
crossbeam-utils = "0.8"
sharded-slab = "0.1.7"
parking_lot = "0.12.3"
crossbeam = "0.8.4"
crossbeam-epoch = "0.9.18"

[dev-dependencies]
env_logger = "0.10"
# Add other dev dependencies if needed
