[package]
name = "parallax-source"
version.workspace = true
edition.workspace = true
description = "Source file management for the Parallax compiler"

[dependencies]
salsa = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
thiserror = { workspace = true }
serde = { version = "1.0", features = ["derive"] }

log = "0.4"
fxhash = "0.2"
toml = "0.8"