[package]
name = "parallax-stdlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salsa = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
thiserror = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
triomphe = "0.1.8" 
parallax-source = { path = "../parallax-source" }
fxhash = "0.2"
rustc-hash = { workspace = true }