[package]
name = "parallax-typeck"
version = "0.1.0"
edition = "2021"

[dependencies]
parallax-lang = { path = "../parallax-lang" }
parallax-resolve = { path = "../parallax-resolve" }
miette = "5.6.0"
thiserror = "1.0"
fxhash = "0.2.1"
salsa = "0.16.1"
ena = "0.14.0"
codespan = "0.11.1"
codespan-reporting = "0.11.1"
log = "0.4"
smallvec = "1.11.0"
itertools = "0.11.0"
rustc-hash = "1.1.0"

[dev-dependencies]
